--- a/index.html
+++ b/index.html
@@ -10,75 +10,81 @@
 </head>
 
 <body>
-        <nav>
-            <div class="wrapper">
-                <img src="img/menu.svg" alt="">
-                <h1><a href="index.html">Adam Nawrocki</a></h1>
-                <ul>
-                    <li><a href="index.html">Adam Nawrocki</a></li>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                </ul>
-            </div>
-        </nav>
+    <nav>
+        <div class="wrapper">
+            <img src="img/menu.svg" alt="">
+            <h1><a href="index.html">Adam Nawrocki</a></h1>
+            <ul>
+                <li><a href="index.html">Adam Nawrocki</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+            </ul>
+        </div>
+    </nav>
     <header>
-        <div class="wrapper" >
+        <div class="wrapper">
             <h2>Front End Developer</h2>
             <a href="portfolio.html" class="btn">View Portfolio</a>
         </div>
     </header>
-        <section class="location">
-                <div class="wrapper">
-                    <div class="author-location">
-                        <div class="location-text">
-                            <h2>About Me</h2>
-                            <p>I like teaching and constantly improving. In my spare time I read and play tennis.</p>
-                        </div>
-                        <div class="location-image">
-                            <img src="img/mitten.png" alt="">
-                        </div>
-                    </div>
+    <section class="location">
+        <div class="wrapper">
+            <div class="author-location">
+                <div class="location-text">
+                    <h2>About Me</h2>
+                    <p>I like teaching and constantly improving. In my spare time I read and play tennis.</p>
                 </div>
-        </section>
-        <section class="projects">
-            <h2>Portfolio</h2>
-            <div class="wrapper">
-                <div class="project-row">
-                    <div class="project">
-                        <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
-                        <p>Using data from Weather Underground's API to display info for the selected city</p>
-                        <a href="https://github.com/bcuz/api">See Code</a>
-                    </div>
-                    <div class="project">
-                        <a href="click-for-feature-testimonials"><img src="img/extension.png" class="extension" alt=""></a>
-                        <p>I help maintain/develop an extension that Codecademy Advisors use to speed up workflow</p>
-                        <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
-                    </div>
+                <div class="location-image">
+                    <img src="img/mitten.png" alt="">
                 </div>
-                <div class="btn-row">
-                    <a href="portfolio.html" class="btn">View Full Portfolio</a>
+            </div>
+        </div>
+    </section>
+    <section class="projects">
+        <h2>Portfolio</h2>
+        <div class="wrapper">
+            <div class="project-row">
+                <div class="project">
+                    <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
+                    <p>Using data from Weather Underground's API to display info for the selected city</p>
+                    <a href="https://github.com/bcuz/api">See Code</a>
                 </div>
-        </section>
-        <section class="intro">
-                <div class="wrapper">
-                    <div class="author-intro">
-                        <div class="intro-image">
-                            <img src="img/puzzle.jpg" alt="">
-                        </div>
-                        <div class="intro-text">
-                            <h2>Objective</h2>
-                            <p>My goal is to improve a product that is moving the world forward at a place that puts work above status.</p>
-                        </div>
-                    </div>
+                <div class="project">
+                    <a href="click-for-feature-testimonials"><img src="img/extension.png" class="extension" alt=""></a>
+                    <p>I help maintain/develop an extension that Codecademy Advisors use to speed up workflow</p>
+                    <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
                 </div>
-        </section>
+            </div>
+            <div class="btn-row">
+                <a href="portfolio.html" class="btn">View Full Portfolio</a>
+            </div>
+    </section>
+    <section class="intro">
+        <div class="wrapper">
+            <div class="author-intro">
+                <div class="intro-image">
+                    <img src="img/puzzle.jpg" alt="">
+                </div>
+                <div class="intro-text">
+                    <h2>Objective</h2>
+                    <p>My goal is to improve a product that is moving the world forward at a place that puts work above status.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="wrapper">
             <ul>
-                <li><a href="https://github.com/bcuz"><img src="img/github.png" alt=""></a></li>
-                <li><a href="https://www.linkedin.com/pub/adam-nawrocki/b4/b60/1b0"><img src="img/linkedin.png" alt=""></a></li>
-                <li><a href="mailto:adam.nawroc@gmail.com"><img src="img/email.png" alt=""></a></li>
+                <li>
+                    <a href="https://github.com/bcuz"><img src="img/github.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/pub/adam-nawrocki/b4/b60/1b0"><img src="img/linkedin.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="mailto:adam.nawroc@gmail.com"><img src="img/email.png" alt=""></a>
+                </li>
             </ul>
         </div>
     </footer>
