add some alt text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p>I like teaching and constantly improving. In my spare time I read and play tennis.</p>
                 </div>
                 <div class="location-image">
-                    <img src="img/mitten.png" alt="">
+                    <img src="img/mitten.png" alt="michigan">
                 </div>
             </div>
         </div>
