--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <div class="btn-row">
                 <a href="portfolio.html" class="btn">View Full Portfolio</a>
             </div>
+        </div>            
     </section>
     <section class="intro">
         <div class="wrapper">
