--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
                     <a href="https://github.com/bcuz/api">See Code</a>
                 </div>
                 <div class="project">
+                    <!-- ~ 620x370 on pinta -->
                     <a href="https://bcuz.github.io/wikipedia-viewer/"><img src="img/viewer.png" alt=""></a>
                     <p>Using data from the Wikipedia API </p>
                     <a href="https://github.com/bcuz/wikipedia-viewer">See Code</a>
