use big img on main page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="https://github.com/bcuz/api">See Code</a>
                 </div>
                 <div class="project">
-                    <a href="click-for-feature-testimonials"><img src="img/extension.png" class="extension" alt=""></a>
+                    <a href="click-for-feature-testimonials"><img src="img/extension-b.png" class="extension" alt=""></a>
                     <p>I help maintain/develop an extension that Codecademy Advisors use to speed up workflow</p>
                     <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
                 </div>
