--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="project">
                     <a href="click-for-feature-testimonials"><img src="img/extension-b.png" class="extension" alt=""></a>
-                    <p>I help maintain/develop an extension that Codecademy Advisors use to speed up workflow</p>
+                    <p>I help maintain/develop a Chrome extension that Codecademy Advisors use to speed up workflow</p>
                     <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
                 </div>
             </div>
