--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                     <p>Using data from Weather Underground's API </p>
                     <a href="https://github.com/bcuz/api">See Code</a>
                     <a href="click-for-feature-testimonials"><img src="img/extension.png" class="extension" alt=""></a>
-                    <p>I help maintain/develop an extension that Codecademy Advisors use to speed up workflow</p>
+                    <p>I help maintain/develop a Chrome extension that Codecademy Advisors use to speed up workflow</p>
                     <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
                 </div>
                 <div class="project">
