change class name

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
             </div>
         </div>            
     </section>
-    <section class="intro">
+    <section class="goal">
         <div class="wrapper">
-            <div class="author-intro">
-                <div class="intro-image">
+            <div class="author-goal">
+                <div class="goal-image">
                     <img src="img/puzzle.jpg" alt="">
                 </div>
-                <div class="intro-text">
+                <div class="goal-text">
                     <h2>Objective</h2>
                     <p>My goal is to improve a product that is moving the world forward at a place that puts work above status.</p>
                 </div>
