change class name

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             <a href="portfolio.html" class="btn">View Portfolio</a>
         </div>
     </header>
-    <section class="location">
+    <section class="intro">
         <div class="wrapper">
-            <div class="author-location">
-                <div class="location-text">
+            <div class="author-intro">
+                <div class="intro-text">
                     <h2>About Me</h2>
                     <p>I like teaching and constantly improving. In my spare time I read and play tennis.</p>
                 </div>
-                <div class="location-image">
+                <div class="intro-image">
                     <img src="img/mitten.png" alt="michigan">
                 </div>
             </div>
