--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Adam Nawrocki - Front End Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -82,7 +82,7 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.min.js"></script>
 </body>
 
 </html>
