--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="author-intro">
                 <div class="intro-text">
                     <h2>About Me</h2>
-                    <p>I like teaching and constantly improving. In my spare time I read and play tennis.</p>
+                    <p>I use Ubuntu and VS Code. I spend weekends reading/trading books and playing tennis.</p>
                 </div>
                 <div class="intro-image">
                     <img src="img/mitten.png" alt="michigan">
@@ -46,14 +46,14 @@
         <div class="wrapper">
             <div class="project-row">
                 <div class="project">
-                    <a href="https://bcuz.github.io/weather-api/"><img src="img/api.png" alt=""></a>
-                    <p>Using data from Weather Underground's API to display info for the selected city</p>
-                    <a href="https://github.com/bcuz/weather-api">See Code</a>
-                </div>
-                <div class="project">
                     <a href="click-for-feature-testimonials"><img src="img/extension-b.png" class="extension" alt=""></a>
                     <p>I help maintain/develop a Chrome extension that Codecademy Advisors use to speed up workflow</p>
                     <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
+                </div>
+                <div class="project">
+                    <a href="https://bcuz.github.io/weather-api/"><img src="img/api.png" alt=""></a>
+                    <p>Using data from Weather Underground's API to display info for the selected city</p>
+                    <a href="https://github.com/bcuz/weather-api">See Code</a>
                 </div>
             </div>
             <div class="btn-row">
