put js in a file

--- a/test.html
+++ b/test.html
@@ -9,16 +9,6 @@
 <body>
     <textarea rows="50" cols="150">ccd497ef-cb0f-4294-9044-1b6faead0768</textarea>
 
-    <script>
-        const myArea = document.querySelector("textarea");
-
-        // function onFooClick() {
-        // myArea.innerText = "button clicked";
-        // }
-        // myArea.onclick = onFooClick;
-
-        myArea.select()
-
-    </script>
+    <script src="test.js"></script>
 </body>
 </html>
